crates/strider/tests/snapshots/aarch64__calls__fib_recursive.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "7" [label="const 0x7f0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "5" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "5" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x7f0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "15" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "15" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "16" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "15" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "20" -> "16" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "21" -> "16" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "21" [label="φ q1", shape=house, fillcolor="#163030"];
  "15" -> "21" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "22" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v23" [color="#888888", style=dashed];
  "v23" -> "21" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "20" [label="φ q0", shape=house, fillcolor="#163030"];
  "15" -> "20" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "24" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v25" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v25" [color="#888888", style=dashed];
  "v25" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "24" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="φ x1", shape=house, fillcolor="#163030"];
  "15" -> "19" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "9" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v26" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v26" [color="#888888", style=dashed];
  "v26" -> "19" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="φ x0", shape=house, fillcolor="#163030"];
  "15" -> "18" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "27" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "28" -> "18" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "28" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "29" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "30" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "31" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "31" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v32" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v32" [color="#888888", style=dashed];
  "v32" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "30" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "v33" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "5" -> "v33" [color="#888888", style=dashed];
  "v33" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="φ Mem", shape=house, fillcolor="#163030"];
  "15" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "6" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "34" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "6" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nx19", shape=Mdiamond, fillcolor="#1a3a5c"];
  "34" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "36" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v37" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v37" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "36" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "39" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "36" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "41" -> "36" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "30" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "13" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "42" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "42" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "43" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "8" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "45" -> "8" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "45" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "46" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "27" -> "46" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "4" [label="Or:bool", shape=box, fillcolor="#2d2d2d"];
  "48" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "50" [label="Equal\nu8 → bool", shape=box, fillcolor="#2d2d2d"];
  "51" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "53" -> "52" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "53" [label="Sborrow\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "43" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "55" -> "51" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "55" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "43" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0xffffffff:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "56" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
